# dspbp

./: Cargo.toml  README.md  update_data.py
data/cn/: items.txt  recipes.txt
data/en/: items.txt  recipes.txt
examples/: NewBase-bl.txt  NewBase.txt  beltless-production.txt
src/: args.rs  blueprint.rs  lib.rs  md5.rs  param.rs  stats.rs
src/data/: area.rs  belt.rs  blueprint.rs  building.rs  enums.rs  lab.rs  mod.rs  producer.rs  sorter.rs  station.rs  traits.rs  visit.rs
src/locale/: mod.rs
src/locale/data/cn/: items.rs  recipes.rs
src/locale/data/en/: items.rs  recipes.rs
